k8s/apps/prose/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prose
  namespace: prose
spec:
  selector:
    app: prose
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
