k8s/apps/prose/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prose
  namespace: prose
  annotations:
    tailscale.com/funnel: "true"
    tailscale.com/proxy-group: ingress
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - prose-api
  defaultBackend:
    service:
      name: prose
      port:
        number: 8080
